--- a/requirements.txt
+++ b/requirements.txt
@@ -42,8 +42,10 @@ Pygments==2.14.0
 pygobject==3.26.1
 pyparsing==3.1.0
 python-apt==1.6.5+ubuntu0.6
+python-box==6.0.2
 python-dateutil==2.8.2
 pyxdg==0.25
+PyYAML==6.0
 requests==2.26.0
 requests-oauthlib==1.3.0
 rsa==4.7.2
@@ -60,6 +62,7 @@ tqdm==4.64.1
 trimesh==3.22.3
 typing-extensions==3.7.4.3
 urllib3==1.26.6
+visual-logging==1.0
 Werkzeug==2.0.1
 wrapt==1.12.1
 zipp==3.5.0
