--- a/config.yaml
+++ b/config.yaml
@@ -2,6 +2,7 @@ data_dir_on_host: "../../data/"
 data_dir: "/data"
 
 logging_output_directory_on_host: "/tmp/hmr2"
-logging_path: "/tmp/log.html"
+logging_output_directory: "/logs"
+logging_path: "/logs/log.html"
 
 test_data_dir: "/data/test_images_modified"
