--- a/requirements.txt
+++ b/requirements.txt
@@ -1,68 +1,59 @@
-absl-py==0.13.0
-asn1crypto==0.24.0
+absl-py==0.15.0
 asttokens==2.2.1
 astunparse==1.6.3
-cachetools==4.2.2
-certifi==2021.5.30
-charset-normalizer==2.0.4
+cachetools==4.2.4
+certifi==2023.5.7
+charset-normalizer==2.0.12
 colorama==0.4.5
-cryptography==2.1.4
 cycler==0.11.0
 dataclasses==0.8
 executing==1.2.0
 flatbuffers==1.12
 gast==0.3.3
-google-auth==1.34.0
-google-auth-oauthlib==0.4.5
+google-auth==2.21.0
+google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
 grpcio==1.32.0
 h5py==2.10.0
 icecream==2.1.3
-idna==2.6
-importlib-metadata==4.6.3
+idna==3.4
+importlib-metadata==4.8.3
 importlib-resources==5.4.0
 invoke==2.1.3
 Keras-Preprocessing==1.1.2
-keyring==10.6.0
-keyrings.alt==3.0
 kiwisolver==1.3.1
-Markdown==3.3.4
+Markdown==3.3.7
 matplotlib==3.3.4
 numpy==1.19.5
-oauthlib==3.1.1
+oauthlib==3.2.2
 opencv-python-headless==4.4.0.46
 opt-einsum==3.3.0
 Pillow==8.4.0
-protobuf==3.17.3
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycrypto==2.6.1
+protobuf==3.19.6
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
 pyglet==1.5.27
 Pygments==2.14.0
-pygobject==3.26.1
 pyparsing==3.1.0
-python-apt==1.6.5+ubuntu0.6
 python-box==6.0.2
 python-dateutil==2.8.2
-pyxdg==0.25
 PyYAML==6.0
-requests==2.26.0
-requests-oauthlib==1.3.0
-rsa==4.7.2
+requests==2.27.1
+requests-oauthlib==1.3.1
+rsa==4.9
 scipy==1.5.4
-SecretStorage==2.3.1
 six==1.15.0
-tensorboard==2.6.0
+tensorboard==2.10.1
 tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.0
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.4.3
 tensorflow-estimator==2.4.0
-tensorflow-gpu==2.4.3
 termcolor==1.1.0
 tqdm==4.64.1
 trimesh==3.22.3
 typing-extensions==3.7.4.3
-urllib3==1.26.6
+urllib3==1.26.16
 visual-logging==1.0
-Werkzeug==2.0.1
+Werkzeug==2.0.3
 wrapt==1.12.1
-zipp==3.5.0
+zipp==3.6.0
